alignment issue for partner in vanity login and removed shadow in edit tracks

--- a/src/assets/admin/layout2/css/themes/custom-skin-main-content.css
+++ b/src/assets/admin/layout2/css/themes/custom-skin-main-content.css
@@ -1094,3 +1094,7 @@ span.ui-column-resize{
     border-right: 1px solid var(--border-color)!important;
     border-bottom: 1px solid var(--border-color)!important;
 }
+/* 12-6-2023 sudha sri */
+.list__item.list__item--selected > .flex-row{
+  box-shadow: none !important
+}
